--- a/app/src/main/res/layout/fragment_quick.xml
+++ b/app/src/main/res/layout/fragment_quick.xml
@@ -7,8 +7,8 @@
     tools:context=".Fragment.QuickFragment">
 
     <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -27,23 +27,23 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/quick_on_kit"
+                android:id="@+id/quick_pir"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
-                android:text= "@string/kit"
+                android:text= "방범 센서"
                 android:textSize="28sp" />
 
             <Button
-                android:id="@+id/quick_voice"
+                android:id="@+id/quick_ultrasonic"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
-                android:text="음성 인식"
+                android:text="초음파 센서"
                 android:textSize="28sp" />
         </LinearLayout>
 
@@ -55,13 +55,41 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/quick_call"
+                android:id="@+id/quick_voice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
-                android:text="보호자와\n통화"
+                android:text="음성 인식"
+                android:textSize="28sp" />
+
+            <Button
+                android:id="@+id/quick_exit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_background"
+                android:text="비상 탈출구"
+                android:textSize="28sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/quick_sos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_background"
+                android:text="SOS 알람"
                 android:textSize="28sp" />
 
             <Button
@@ -71,7 +99,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
-                android:text="119에 전화"
+                android:text="119 전화"
                 android:textSize="28sp" />
         </LinearLayout>
 
